// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attribute-based modifier 1`] = `
"() => create(Foo, {
  \\"className\\": \\"Foo_5cc\\"
});

Styles.include(\`
	.Foo_5cc { background: red; color: white }
\`);"
`;

exports[`Attribute-based modifier 2`] = `
"() => <Foo className=\\"Foo_5cc\\" />;

Styles.include(\`
	.Foo_5cc { background: red; color: white }
\`);"
`;

exports[`Explicitly use modifier 1`] = `
"() => create(Fragment, {}, create(Baz, {
  \\"className\\": \\"Foo_36o Baz_3rl\\"
}), create(Foo, {
  \\"className\\": \\"Foo_36o\\"
}));

Styles.include(\`
	.Foo_36o { color: blue }
	.Baz_3rl { color: red }
\`);"
`;

exports[`Explicitly use modifier 2`] = `
"() => <Fragment><Baz className=\\"Foo_36o Baz_3rl\\" /><Foo className=\\"Foo_36o\\" /></Fragment>;

Styles.include(\`
	.Foo_36o { color: blue }
	.Baz_3rl { color: red }
\`);"
`;

exports[`Nested modifier 1`] = `
"() => create(Fragment, {}, create(Foo, {
  \\"className\\": \\"Foo_36o\\"
}), create(Bar, {}, create(Foo, {
  \\"className\\": \\"Foo_36o Foo_343\\"
})));

Styles.include(\`
	.Foo_36o { color: red }
	.Foo_343 { color: blue }
\`);"
`;

exports[`Nested modifier 2`] = `
"() => <Fragment><Foo className=\\"Foo_36o\\" /><Bar><Foo className=\\"Foo_36o Foo_343\\" /></Bar></Fragment>;

Styles.include(\`
	.Foo_36o { color: red }
	.Foo_343 { color: blue }
\`);"
`;

exports[`Simple modifier 1`] = `
"() => create(Foo, {
  \\"className\\": \\"Foo_5cc\\"
});

Styles.include(\`
	.Foo_5cc { color: red }
\`);"
`;

exports[`Simple modifier 2`] = `
"() => <Foo className=\\"Foo_5cc\\" />;

Styles.include(\`
	.Foo_5cc { color: red }
\`);"
`;

exports[`collapse single-use modifiers 1`] = `
"() => create(Foo, {}, create(Bar, {
  \\"className\\": \\"Bar_14s\\"
}));

Styles.include(\`
	.Bar_14s { border: red solid 1px; background: white; color: red }
\`);"
`;

exports[`collapse single-use modifiers 2`] = `
"() => <Foo><Bar className=\\"Bar_14s\\" /></Foo>;

Styles.include(\`
	.Bar_14s { border: red solid 1px; background: white; color: red }
\`);"
`;
